note-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteapp
  template:
    metadata:
      labels:
        app: noteapp
    spec:
      volumes:
        - name: images-volume

      containers:
        - name: note-app
          image: yves6000/note-app:1.4
          volumeMounts:
            - mountPath: /usr/src/app/images
              name: images-volume
