note-app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: noteapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /note-app
            backend:
              serviceName: noteapp-svc
              servicePort: 2345
